--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <link href="./styles.css" rel="stylesheet">
-    <title>Hello World! I'm mariojuniordev</title>
+    <title>Hello World! I'm mariojuniordev2</title>
   </head>
   <body>
     <h1>Hello World!</h1>
