JS conception, HTML update

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <div class="app-wrap">
     <header>
-      <input type="text" outocomplete="off" class="search-box" placeholder="City Name..." />
+      <input type="text" outocomplete="off" class="search-input" placeholder="City Name..." />
     </header>
     <main>
-      <section class="localtion">
+      <section class="location">
         <div class="city">Type a City Name to Check the Forecast for Today</div>
         <div class="date"></div>
       </section>
