--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
   <div>
@@ -31,7 +31,15 @@
     </main>
   </div>  
 
-  <footer></footer>
+  <footer>
+    <div class="footer-content">
+      <h3>Reach me on my social media!</h3>
+      <ul class="social-media">
+        <li><a href="https://www.linkedin.com/in/mariojuniordev/"><i class="fab fa-instagram">linkedin.com/mariojuniordev</i></a></li>
+        <li><a href="https://github.com/mariojuniordev"><i class="fa fa-github">github.com/mariojuniordev</i></a></li>
+      </ul>
+    </div>
+  </footer>
   <script src="./renderer.js"></script>
 </body>
 </html>
