Footer Style Update

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather Forecast App</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -32,12 +33,40 @@
   </div>  
 
   <footer>
-    <div class="footer-content">
-      <h3>Reach me on my social media!</h3>
-      <ul class="social-media">
-        <li><a href="https://www.linkedin.com/in/mariojuniordev/"><i class="fab fa-instagram">linkedin.com/mariojuniordev</i></a></li>
-        <li><a href="https://github.com/mariojuniordev"><i class="fa fa-github">github.com/mariojuniordev</i></a></li>
-      </ul>
+      <h3>Developed by Mário Júnior. Reach Me On My Social Media!</h3>
+      <div class="wrapper">
+        <div class="button">
+          <a href="https://www.facebook.com/profile.php?id=100001494057057">
+            <div class="icon">
+              <i class="fab fa-facebook-f"></i>
+           </div>
+           <span>Facebook</span>
+          </a>
+        </div>
+        <div class="button">
+          <a href="https://github.com/mariojuniordev">
+            <div class="icon">
+              <i class="fab fa-github"></i>
+           </div>
+           <span>Github</span>
+          </a>
+        </div>
+        <div class="button">
+          <a href="https://www.instagram.com/mariojuniordev/">
+            <div class="icon">
+              <i class="fab fa-instagram"></i>
+           </div>
+           <span>Instagram</span>
+          </a>
+        </div>
+        <div class="button">
+          <a href="https://www.linkedin.com/in/mariojuniordev/">
+            <div class="icon">
+              <i class="fab fa-linkedin"></i>
+           </div>
+           <span>linkedin</span>
+          </a>
+        </div>
     </div>
   </footer>
   <script src="./renderer.js"></script>
