--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <div>
     <header class="show-case">
       <input type="text" autocomplete="off" class="search-input" placeholder="City Name..." />
+      <button type="submit" onclick="handleSubmitButtonClick()" value="submit">Search</button>
     </header>
   
     <video src="assets/background.mp4" muted loop autoplay ></video>
